# noaa-navionics

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: sailboat-pi.md
examples/: noaa-navionics.ini
scripts/: check.sh  check_pi_status.sh  collect_pi_support_bundle.sh  configure_desktop_autologin.sh  configure_gps_time.sh  configure_gpsd.sh  deploy_to_pi.sh  dock_test_pi.sh  enroll_pi_host_key.sh  export_pi_opencpn_data.sh  export_pi_recovery_bundle.sh  export_pi_settings.sh  export_pi_tracks.sh  install_raspberry_pi.sh  post_trip_collect_pi.sh  pre_departure_check_pi.sh  pre_trip_prepare_pi.sh  provision_sailboat_pi.sh  refresh_pi_charts.sh  restore_pi_recovery_user_data.sh  shutdown_pi_safely.sh  start_chartplotter.sh  verify_pi.sh  verify_pi_recovery_exports.sh
src/noaa_navionics/: __init__.py  _safeio.py  cli.py  config.py  downloader.py  gps.py  gui.py  health.py  opencpn.py  report.py  status_gui.py
systemd/: noaa-navionics-preflight.service  noaa-navionics-track.service  noaa-navionics.service  noaa-navionics.timer
templates/: gpsd.default  noaa-navionics-chartplotter.desktop  noaa-navionics-mob.desktop  noaa-navionics-opencpn.desktop  noaa-navionics-status.desktop
tests/: test_downloader.py
